# Voidclient-2.0-FAST

./: .gitignore  CMakeLists.txt  README.md  build.gradle  build_apk.bat  build_apk.sh  gradle.properties  gradlew  settings.gradle
.claude/: settings.local.json
.github/workflows/: build-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native_client.cpp  native_client.h
app/src/main/java/com/voidclient/config/: ConfigManager.kt
app/src/main/java/com/voidclient/native/: NativeInterface.kt
app/src/main/java/com/voidclient/services/: ClientService.kt
app/src/main/java/com/voidclient/ui/: MainActivity.kt  OverlayView.kt
app/src/main/java/com/voidclient/utils/: MemoryUtils.kt
app/src/main/res/: proguard-rules.pro
app/src/main/res/values/: strings.xml  themes.xml
